--- a/index1.html
+++ b/index1.html
@@ -23,7 +23,7 @@
         
         <p class="word"> If anyone faces any problem then you can contact with us</p>
 
-        <div class="contact">Click Here to Contact</div>
+        <div class="contact" onclick="showNumber()">Click Here to Contact</div>
            
     </div>
     <script>
